bunch of changes on threatmap.
Letting port to be unique only per IP address, therefore, no unnecessary merging.

Most changes also come from the config, removing the constraint for port node.

Allow logging for threatmap for verify data entry in suite.py.

--- a/threat_map_config.json
+++ b/threat_map_config.json
@@ -32,7 +32,7 @@
             }
         },
         "Port": {
-            "constraints": ["number", "protocol"],
+            "constraints": [],
             "relationships": {
                 "Service": {
                     "type": "RUNS",
