--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 scan_all_port = false
 use_invasive_methodology = false
 scan_only_online = true
-max_wait_time = 10
+max_wait_time = 10000000
 
 [LLM]
 api_url = "https://api.deepseek.com"
