--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fpdf>=1.7.2",
-    "langchain-mistralai>=0.2.8",
+    "docarray==0.40.0",
+    "fpdf==1.7.2",
+    "langchain==0.3.13",
+    "langchain-community==0.3.13",
+    "langchain-core==0.3.33",
+    "langchain-mistralai==0.2.6",
+    "langchain-openai==0.2.14",
+    "langgraph==0.2.60",
+    "neo4j==5.27.0",
+    "pydantic==2.9.2",
+    "toml==0.10.2",
 ]
